updating image dynamically in Resume Generator project

--- a/30_Project3_ResumeGeneratorUsingJS/index.html
+++ b/30_Project3_ResumeGeneratorUsingJS/index.html
@@ -49,6 +49,13 @@
             ></textarea>
         </div>
 
+        <!-- img uploading dynamically -->
+        <div class="form-group mt-3">
+          <label for="">Select your Photo</label>
+          <input id="imgField" type="file" class="form-control">
+
+        </div>
+
         <h4 class="text-secondary my-3">Important Links:</h4>
 
         <div class="form-group mt-2">
@@ -142,7 +149,8 @@
           <!-- first column -->
           <img 
           src="https://anotherjavaduke.files.wordpress.com/2018/08/avataaars-2.png" alt=""
-          class="img-fluid myimg">
+          class="img-fluid myimg"
+          id="imgTemplate">
 
           <div class="container">
             <p id="nameT1">Amit kumar Jha</p>
