improvement in printouts on REsumeGeneratorProject

--- a/30_Project3_ResumeGeneratorUsingJS/index.html
+++ b/30_Project3_ResumeGeneratorUsingJS/index.html
@@ -153,15 +153,15 @@
           id="imgTemplate">
 
           <div class="container">
-            <p id="nameT1">Amit kumar Jha</p>
-            <p id="contactT">+977-9814123223, +977-9815121326</p>
-            <p id="addressT">Koteswor-32, Kathmandu, Nepal</p>
+            Name: <p id="nameT1">Amit kumar Jha</p>
+            Contact: <p id="contactT">+977-9814123223, +977-9815121326</p>
+            Address: <p id="addressT">Koteswor-32, Kathmandu, Nepal</p>
 
             <hr>
 
-            <p><a id="fbT" href="#1">Facebook</a></p>
-            <p><a id="instaT" href="#1">Instagram</a></p>
-            <p><a id="linkedinT" href="#1">Linkedin</a></p>
+            Facebook: <p><a id="fbT" href="#1">Facebook</a></p>
+            Instagram: <p><a id="instaT" href="#1">Instagram</a></p>
+            Linkedin: <p><a id="linkedinT" href="#1">Linkedin</a></p>
           </div>
         </div>
 
@@ -218,12 +218,12 @@
                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
                </ul>
             </div>
-            <div class="container mt-3 text-center"> 
-              <button onclick="printCV()" class="btn background">Print Resume</button> 
-
-            </div>
-          </div>
             
+          </div>
+          <div class="container mt-3 text-center"> 
+            <button onclick="printCV()" class="btn background noprint">Print Resume</button> 
+
+          </div>
         </div>
 
       </div>
